Fixes #9: License in the footer is wrapped.

--- a/components/footer-a/footer-a.less
+++ b/components/footer-a/footer-a.less
@@ -15,23 +15,6 @@ It is forbidden to copy and distribute this file in its original or modified for
 	p {
 		margin: 0;
 		display: inline-block;
-
-		&.footer-a {
-			&-left {
-				text-align: left;
-			}
-
-			&-right {
-				text-align: right;
-			}
-		}
-
-		.global-is-mobile( {
-			&.footer-a {
-				&-left, &-right {
-					text-align: center;
-				}
-			}
-		} );
+		text-align: center;
 	}
 }
