--- a/components/global/global.less
+++ b/components/global/global.less
@@ -21,7 +21,7 @@ It is forbidden to copy and distribute this file in its original or modified for
 
 @global-border-radius:					3px;
 
-@global-is-mobile-threshold:			850px;
+@global-is-mobile-threshold:			900px;
 
 .global-font-size( @font-size-rem, @line-height-ratio: 1 ) {
 	@font-size-px: round( @font-size-rem * @global-font-size, 2 );
